--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,8 +1,8 @@
-name: run main.py
+name: run apod.py
 
 on:
   schedule:
-    - cron: '0 0 * * 1' # At 00:00 on Monday
+    - cron: '5 * * * *' # Every 5min
 
 jobs:
   build:
@@ -15,7 +15,7 @@ jobs:
       - name: setup python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9' # install the python version needed
+          python-version: '3.10.12' # install the python version needed
           
       - name: install python packages
         run: |
@@ -25,14 +25,14 @@ jobs:
       - name: execute py script # run main.py
         env:
           SOME_SECRET: ${{ secrets.SOME_SECRET }}
-        run: python main.py
+        run: python apod.py
           
       - name: commit files
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add -A
-          git diff-index --quiet HEAD || (git commit -a -m "updated logs" --allow-empty)
+          git diff-index --quiet HEAD || (git commit -a -m "new day update" --allow-empty)
           
       - name: push changes
         uses: ad-m/github-push-action@v0.6.0
