--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -26,16 +26,11 @@ jobs:
         env:
           SOME_SECRET: ${{ secrets.SOME_SECRET }}
         run: python apod.py
-          
-      - name: commit files
+        
+      - name: commit and force push
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add -A
-          git diff-index --quiet HEAD || (git commit -a -m "new day update" --allow-empty)
-          
-      - name: push changes
-        uses: ad-m/github-push-action@v0.6.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: main
+          git commit -a -m "new day update" --allow-empty
+          git push -f origin main
