--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,7 @@ name: daily update
 
 on:
   schedule:
-    - cron: '0 0 * * *' # Once everyday at 00:00
+    - cron: '*/5 * * * *' # Once everyday at 00:00
 
 jobs:
   build:
