--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,7 @@ name: daily update
 
 on:
   schedule:
-    - cron: '0 6 * * *' # Once everyday at 06:00 UTC
+    - cron: '*/5 * * * *' # Once everyday at 06:00 UTC
 
 jobs:
   build:
@@ -38,6 +38,9 @@ jobs:
 
       - name: execute forecast script
         run: python get_forecast.py
+
+      - name: update README
+        run: python update_readme.py
         
       - name: commit and force push
         run: |
